# Made side navigation links full width # Corrected spacing issue with sub-section links in the side navigation
git-svn-id: https://svn.ircan.gc.ca/svn/wet-boew-gcwu-fegc@116 ef584cfa-36a7-404c-b6be-e8b063e69e19

--- a/trunk/theme-gcwu-fegc/css/theme-gcwu-fegc-ie6.css
+++ b/trunk/theme-gcwu-fegc/css/theme-gcwu-fegc-ie6.css
@@ -17,8 +17,7 @@
 @media screen {
 	#cn-aside {position:static;}
 
-	.cn-left-col-default li a{display: inline-block;}
-	.cn-left-col-default li a.nav-current{display:block;}
+	.cn-left-col-default li a{height:1%;}
 	.cn-left-col-default h3.top-section a:link,.cn-left-col-default h3.top-section a:visited,.cn-left-col-default h3.top-section a:link.nav-current,.cn-left-col-default h3.top-section a:visited.nav-current{color:#FFF;}
 	.cn-left-col-default h3 a:link,.cn-left-col-default h3 a:visited,.cn-left-col-default h4 a:link,.cn-left-col-default h4 a:visited,.cn-left-col-default .top-level a:link,.cn-left-col-default .top-level a:visited,.cn-left-col-default li a:link,.cn-left-col-default li a:visited{color:#333;}
 	.cn-left-col-default h3 a:link.nav-current,.cn-left-col-default h3 a:visited.nav-current,.cn-left-col-default h4 a:link.nav-current,.cn-left-col-default h4 a:visited.nav-current,.cn-left-col-default .top-level a:link.nav-current,.cn-left-col-default .top-level a:visited.nav-current,.cn-left-col-default li a:link.nav-current,.cn-left-col-default li a:visited.nav-current{color:#0F315B;}
